# wolkenatlas

./: .gitignore  MANIFEST.in  README.md  Readme.md  pyproject.toml  requirements.txt  setup.py
wolkenatlas/: __init__.py  constants.py  download.py  embedding.py  encoder.py  preprocessing.py
wolkenatlas/util/: constants.py  data_processing.py  file_processing.py
