[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wolkenatlas"
version = "0.1.5"
authors = [
  { name="Thomas Kober", email="tttthomasssss@gmail.com" },
]
description = "NLP embedding wrapper"
readme = "Readme.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/tttthomasssss/wolkenatlas"
"Bug Tracker" = "https://github.com/tttthomasssss/wolkenatlas/issues"